--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Centered Image</title>
+<title>Contemplative Neuroscience</title>
 <style>
   body, html {
     height: 100%;
@@ -17,7 +17,7 @@
     height: 100%;
   }
   .container img {
-    max-height: 33.33%; /* Limits the image to a third of the viewport height */
+    max-height: 66%; /* Limits the image to a third of the viewport height */
     max-width: 100%; /* Ensures the image does not exceed the width of the viewport */
   }
 </style>
