--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+meta_description: "Contemplative Neuroscience is a curated collection of scientific research on meditation and mindfulness, exploring how these practices affect the brain. Find paper summaries on topics from jhana meditation to neuroplasticity."
 ---
 
 <main class="content" role="main">
