Updates to all papers page functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ meta_description: "Contemplative Neuroscience is a curated collection of scienti
       
       <div class="content-card">
         <h2>All Papers</h2>
-        <p>View the complete collection of research paper summaries in chronological order.</p>
+        <p>Browse, search, and sort the complete collection of research paper summaries.</p>
         <a href="/all-papers" class="card-button">View All Papers</a>
       </div>
       
