Add trailing slashes to links

--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@ title: Home
       <div class="content-card">
         <h2>Research Themes</h2>
         <p>Browse papers organized by key research areas in contemplative neuroscience, from neurological correlates to biological health effects.</p>
-        <a href="/themes" class="card-button">Explore Themes</a>
+        <a href="/themes/" class="card-button">Explore Themes</a>
       </div>
 
       <div class="content-card">
         <h2>All Papers</h2>
         <p>Browse, search, and sort the complete collection of research paper summaries.</p>
-        <a href="/all-papers" class="card-button">View All Papers</a>
+        <a href="/all-papers/" class="card-button">View All Papers</a>
       </div>
 
       <div class="content-card">
         <h2>Glossary</h2>
         <p>Learn about key terms and concepts in contemplative neuroscience and meditation research.</p>
-        <a href="/glossary" class="card-button">View Glossary</a>
+        <a href="/glossary/" class="card-button">View Glossary</a>
       </div>
     </div>
 </main>
